<resources>
    <string name="app_name">FertilizerForLatex</string>
    <string name="main_title">โปรแกรมคำนวนการให้ปุ๋ยยางพารา</string>
    <string name="begin_label">เข้าสู่การใช้งาน</string>
    <string name="start_lable">เริ่มคำนวณ</string>
    <string name="sum_lable">สรุปข้อมูลการใส่ปุ๋ย</string>
    <string name="continue_label">เข้าใช้งานอีกครั้ง</string>
    <string name="history_label">ประวัติการใส่ปุ๋ยที่ผ่านมา</string>
    <string name="about_label">เกี่ยวกับการใช้งานโปรแกรม</string>
    <string name="exit_label">ออกการโปรแกรม</string>
    <string name="about_title">คำแนะนำการใช้(Instruction)</string>
    <string name="about_text">\<b>คำแนะนำ</b> โปรแกรมนี้จัดทำขึ้นเพื่อให้คำแนะนำแก่เกษตรกรรุ่นใหม่หรือผู้ที่สนใจ
    ซึ่งจะช่วยในการคำนวณการให้ปุ๋ยยางพารา อย่างถูกต้องและเหมาะสมตามที่ทางการยางแห่งประเทศไทยได้แนะนำมา</string>
    //กำหนดค่าให้layout start
    <string name="start_title">กรุณากรอกข้อมูลค่ะ </string>
    <string name="area_label">พื้นที่</string>
    <string name="tree_label">จำนวนต้น</string>
    <string name="age_label">อายุของต้นยาง</string>
    <string name="date_label">วันที่ใส่ปุ๋ย</string>
    <string name="enter_label">ยืนยัน</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_done">Done</string>
    <string name="action_edit">Edit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_new_task">AddNewTaskActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_fertilizing_round">FertilizingRoundActivity</string>
    <string name="title_activity_fertilizing_guide">FertilizingGuideActivity</string>


</resources>
